# ascii2hdf5-examples

./: README.md  ascii2hdf5.py  ascii2netcdf.py  plot.py  plot_hdf5.py  requirements.txt
compression/: CMakeLists.txt  burrows_wheeler.c  burrows_wheeler.cxx  burrows_wheeler.h  burrows_wheeler.hpp  burrows_wheeler.py  rle.c  rle.cxx  test_bwt_text.c  test_bwt_text.cxx
